# diy_drone

./: README.md
camera_nav/: package.xml  setup.cfg  setup.py
camera_nav/config/: costmap_params.yaml
camera_nav/launch/: camera_nav_launch.py
camera_nav/maps/: map.yaml
controller/: package.xml  setup.py
controller/controller/: controller.ino  controller.py
controller/controller/src/RTCom/: RTCom.cpp  RTCom.h
drone/: setup.py
drone/arduino/Teensy-DShot/: README.md  Teensy-DShot.ino  library.json  platformio.ini
drone/arduino/Teensy-DShot/src/: DShot.cpp  DShot.h
drone/arduino/main/: CompClass.h  UdpPublisher.cpp  main.ino  old  save_main.txt  visulize.py
drone/arduino/mainv2/: CompClass.cpp  mainv2.ino  save
drone/arduino/motor_test/: motor_test.ino
drone/arduino/rviz1/: UdpPublisher.cpp  UdpPublisher.hpp  main.ino
drone/arduino/test/: two_imu.ino
drone/pcb/: mission.md
gnd_bot/: setup.py
gnd_bot/gnd_bot/: joy_controller.py
gnd_bot/gnd_bot/teensy_controller/: teensy_controller.ino
gnd_bot/gnd_bot/teensy_encoder/: teensy_encoder.ino
gnd_bot/gnd_bot/teensy_motor/: teensy_motor.ino
hamama/src/camera_nav/: package.xml  setup.py
hamama/src/camera_nav/camera_nav/: laser_scan.py  vio.py
hamama/src/drone/: package.xml  setup.py
hamama/src/drone/drone/: ros_teensyV3.py  visulize_imu_data.py
src/drone/arduino/Polulo_test/: PololuIMU.cpp  Polulo_test.ino
src/drone/arduino/main/: IMUCombiner.cpp  IMUCombiner.hpp  (+2 more)
src/drone/drone/: visulize.py
src/drone_cpp/: CMakeLists.txt  package.xml
src/drone_cpp/src/: roc_teensy_c++.cpp
(+32 files in other folders)
